# n1

gpt2-from-scratch/: Makefile  README.md  pyproject.toml  requirements.txt
gpt2-from-scratch/configs/: cpu_demo.json  smoke_test.json  tiny_shakespeare.json
gpt2-from-scratch/docs/: architecture.md  learning_path.md
gpt2-from-scratch/notebooks/: gpt2_from_scratch_walkthrough.ipynb
gpt2-from-scratch/scripts/: download_data.py
gpt2-from-scratch/src/gpt2_scratch/: __init__.py  config.py  data.py  generate.py  model.py  train.py  utils.py
gpt2-from-scratch/tests/: test_data.py  test_model.py
