[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-from-scratch"
version = "0.1.0"
description = "Educational character-level GPT-2-style language model built from scratch with PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Educational repository"}]
dependencies = [
  "torch>=2.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyter>=1.0",
]

[project.scripts]
gpt2-train = "gpt2_scratch.train:main"
gpt2-generate = "gpt2_scratch.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
